# scripts

./: .gitignore  .pre-commit-config.yaml  README.md  autoawq.py  batch-replacer.sh  batch_pic_optim  clip-image-text-similarity.py  coredumper.sh  css_path_fix.sh  flatten-dir.py  git-autopull.sh  gitautoupd.sh  htmlindex  htmlindex.sh  image-filter.py  install.sh  kokoro_tts.py  library.sh  llm-chain-translation.py  llm-compressor-quantize.py  llm-image-captioning.py  llm-prompt-convert  llm-query  llm_request.py  mirror-sync.sh  mirrorsync.example  mirrorsync.sh  neostdlib.sh  pic_check_exist  pic_optim  pic_size_cmp  pyproject.toml  randwallpaper.sh  record.sh  requirements.txt  safetensors-ls.py  sd-merger.py  template.sh  transcoding.sh  uptime  (+5 more)
python-src/neoscripts/: .gitignore  autoawq.py  clip_image_text_similarity.py  flatten_dir.py  image_filter.py  kokoro_tts.py  llm_chain_translation.py  llm_compressor_quantize.py  llm_image_captioning.py  llm_request.py  lora_scaler.py  pic_aspect_ratio.py  pic_dir_dedupe.py  pic_dir_reduce.py  pic_mono_dither.py  pic_tags_move.py  safetensor_similarity.py  safetensor_visualize.py  safetensors_ls.py  sd_merger.py
shellscript/: batch_pic_optim  mirrorsync.example  pic_size_cmp
shellscript/transcoding/: nvenc.sh  transcoding-av1.sh  transcoding-lowrate.sh  transcoding-x265-6M.sh
src/neoscripts/: autoawq.py  clip_image_text_similarity.py  kokoro_tts.py  llm_compressor_quantize.py  llm_image_captioning.py  llm_request.py
transcoding/: vmaf.sh
